--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -1,1 +1,3 @@
-custom: https://gitcoin.co/grants/86/gitcoin-sustainability-fund
+custom:
+- https://gitcoin.co/grants/86/gitcoin-sustainability-fund
+- https://codefund.io
