--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -1,3 +1,2 @@
-custom:
-- https://gitcoin.co/grants/86/gitcoin-sustainability-fund
-- https://codefund.io
+custom: https://gitcoin.co/grants/86/gitcoin-sustainability-fund
+custom: https://codefund.io
